--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,15 @@
 {
-    "css.customData": ["./.vscode/my-less.css-data.json"]
+    "css.customData": [
+        "./.vscode/my-less.css-data.json"
+    ],
+    "mdk.uieditor": {
+        "left": {
+            "visible": true,
+            "width": 285
+        },
+        "right": {
+            "visible": true,
+            "width": 464
+        }
+    }
 }
