--- a/Services/app_consumos_prd.service
+++ b/Services/app_consumos_prd.service
@@ -1,12 +1,5 @@
 {
-    "DestinationName": "app.consumos.prd",
-    "OfflineEnabled": true,
-    "LanguageURLParam": "",
-    "OnlineOptions": {},
-    "OfflineOptions": {
-	"StoreParameters": {}
-},
-    "PathSuffix": "",
-    "SourceType": "Mobile",
-    "ServiceUrl":""
+	"DestinationName": "app.consumos.prd",
+	"OfflineEnabled": true,
+	"SourceType": "Mobile"
 }
